// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Always Show All 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="components-suggestion--always-show-all"
    id=":label5"
  >
    Viser alle options også når valgt
  </label>
  <ds-suggestion>
    <data
      value="Sogndal"
      aria-label="Sogndal, Press to remove"
      aria-selected="true"
      role="option"
      slot="items"
      tabindex="-1"
    >
      Sogndal
    </data>
    <input
      placeholder=" "
      id="components-suggestion--always-show-all"
      type="text"
      data-label
      list=":u-datalist7"
      aria-label="​​​​​"
      popovertarget=":u-datalist7"
      aria-autocomplete="list"
      aria-controls=":u-datalist7"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <del
      aria-label="Tøm"
      role="button"
    >
    </del>
    <u-datalist
      popover="manual"
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      role="listbox"
      tabindex="-1"
      aria-multiselectable="false"
      id=":u-datalist7"
      aria-labelledby=":label5"
      data-floating="bottom"
      style="--_ds-floating-arrow-x: 583px; --_ds-floating-arrow-y: -32px; width: 1166px; max-height: 773px; translate: <removed>;"
    >
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="true"
        selected
        aria-hidden="false"
      >
        Sogndal
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Oslo
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Brønnøysund
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Stavanger
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Trondheim
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Bergen
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Lillestrøm
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
`;

exports[`Controlled Independent Label Value 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="components-suggestion--controlled-independent-label-value"
    id=":label2"
  >
    Velg person
  </label>
  <ds-suggestion>
    <data
      value="#004"
      aria-label="Lars, Press to remove"
      aria-selected="true"
      role="option"
      slot="items"
      tabindex="-1"
    >
      Lars
    </data>
    <input
      placeholder=" "
      id="components-suggestion--controlled-independent-label-value"
      type="text"
      data-label
      list=":u-datalist4"
      aria-label="​​​​​"
      popovertarget=":u-datalist4"
      aria-autocomplete="list"
      aria-controls=":u-datalist4"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <del
      aria-label="Tøm"
      role="button"
    >
    </del>
    <u-datalist
      popover="manual"
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      role="listbox"
      tabindex="-1"
      aria-multiselectable="false"
      id=":u-datalist4"
      aria-labelledby=":label2"
      data-floating="bottom"
      style="--_ds-floating-arrow-x: 583px; --_ds-floating-arrow-y: -32px; width: 1166px; max-height: 773px; translate: <removed>;"
    >
      <u-option
        label="Lars"
        value="#004"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="true"
        selected
        aria-hidden="false"
      >
        Lars
      </u-option>
      <u-option
        label="James"
        value="#007"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        James
      </u-option>
      <u-option
        label="Nina"
        value="#113"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Nina
      </u-option>
      <u-option
        label="Tove"
        value="#110"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Tove
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
<hr
  aria-hidden="true"
  style="margin-top: var(--ds-size-4);"
>
<div style="margin: var(--ds-size-2) 0;">
  Valgt person:
  <pre style="font-size: 14px; white-space: pre-wrap; width: 400px;">
    {"label":"Lars","value":"#004"}
  </pre>
</div>
<button
  data-variant="secondary"
  type="button"
>
  Sett Nina
</button>
`;

exports[`Controlled Multiple 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="components-suggestion--controlled-multiple"
  >
    Velg destinasjoner
  </label>
  <ds-suggestion data-multiple>
    <data
      value="Sogndal"
      aria-label="Sogndal, Press to remove"
      aria-selected="true"
      role="option"
      slot="items"
      tabindex="-1"
    >
      Sogndal
    </data>
    <data
      value="Stavanger"
      aria-label="Stavanger, Press to remove"
      aria-selected="true"
      role="option"
      slot="items"
      tabindex="-1"
    >
      Stavanger
    </data>
    <input
      placeholder=" "
      id="components-suggestion--controlled-multiple"
      type="text"
      data-label
      list=":u-datalist3"
      aria-label=", Navigate left to find 2 selected​​​​​"
      popovertarget=":u-datalist3"
      aria-autocomplete="list"
      aria-controls=":u-datalist3"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <del
      aria-label="Tøm"
      hidden
      role="button"
    >
    </del>
    <u-datalist
      popover="manual"
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      hidden
      role="listbox"
      tabindex="-1"
      aria-multiselectable="true"
      id=":u-datalist3"
    >
      <u-option
        label="Sogndal"
        value="Sogndal"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="true"
        selected
      >
        Sogndal
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Oslo"
        value="Oslo"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
      >
        Oslo
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Brønnøysund"
        value="Brønnøysund"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
      >
        Brønnøysund
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Stavanger"
        value="Stavanger"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="true"
        selected
      >
        Stavanger
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Trondheim"
        value="Trondheim"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
      >
        Trondheim
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Bergen"
        value="Bergen"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
      >
        Bergen
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Lillestrøm"
        value="Lillestrøm"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
      >
        Lillestrøm
        <div>
          Kommune
        </div>
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
<hr
  aria-hidden="true"
  style="margin-top: var(--ds-size-4);"
>
<p
  data-variant="default"
  style="margin: var(--ds-size-2) 0;"
>
  Valgte reisemål: Sogndal, Stavanger
</p>
<button
  data-variant="primary"
  type="button"
>
  Sett reisemål til Sogndal, Stavanger
</button>
`;

exports[`Controlled Single 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="components-suggestion--controlled-single"
  >
    Velg destinasjon
  </label>
  <ds-suggestion>
    <data
      value="Sogndal"
      aria-label="Sogndal, Press to remove"
      aria-selected="true"
      role="option"
      slot="items"
      tabindex="-1"
    >
      Sogndal
    </data>
    <input
      placeholder=" "
      id="components-suggestion--controlled-single"
      type="text"
      data-label
      list=":u-datalist2"
      aria-label="​​​​​"
      popovertarget=":u-datalist2"
      aria-autocomplete="list"
      aria-controls=":u-datalist2"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <del
      aria-label="Tøm"
      role="button"
    >
    </del>
    <u-datalist
      popover="manual"
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      hidden
      role="listbox"
      tabindex="-1"
      aria-multiselectable="false"
      id=":u-datalist2"
    >
      <u-option
        label="Sogndal"
        value="Sogndal"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="true"
        selected
        aria-hidden="false"
      >
        Sogndal
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Oslo"
        value="Oslo"
        tabindex="-1"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        disabled
        aria-hidden="true"
      >
        Oslo
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Brønnøysund"
        value="Brønnøysund"
        tabindex="-1"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        disabled
        aria-hidden="true"
      >
        Brønnøysund
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Stavanger"
        value="Stavanger"
        tabindex="-1"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        disabled
        aria-hidden="true"
      >
        Stavanger
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Trondheim"
        value="Trondheim"
        tabindex="-1"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        disabled
        aria-hidden="true"
      >
        Trondheim
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Bergen"
        value="Bergen"
        tabindex="-1"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        disabled
        aria-hidden="true"
      >
        Bergen
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Lillestrøm"
        value="Lillestrøm"
        tabindex="-1"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        disabled
        aria-hidden="true"
      >
        Lillestrøm
        <div>
          Kommune
        </div>
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
<hr
  aria-hidden="true"
  style="margin-top: var(--ds-size-4);"
>
<p
  data-variant="default"
  style="margin: var(--ds-size-2) 0;"
>
  Valgte reisemål: Sogndal
</p>
<button
  data-variant="primary"
  type="button"
>
  Sett reisemål til Sogndal
</button>
`;

exports[`Custom Filter Alt 1 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="components-suggestion--custom-filter-alt-1"
    id=":label3"
  >
    Skriv inn et tall mellom 1-6
  </label>
  <ds-suggestion>
    <input
      placeholder=" "
      id="components-suggestion--custom-filter-alt-1"
      type="text"
      data-label
      list=":u-datalist5"
      aria-label="​​​​​"
      popovertarget=":u-datalist5"
      aria-autocomplete="list"
      aria-controls=":u-datalist5"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <del
      aria-label="Tøm"
      hidden
      role="button"
    >
    </del>
    <u-datalist
      popover="manual"
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      role="listbox"
      tabindex="-1"
      aria-multiselectable="false"
      id=":u-datalist5"
      aria-labelledby=":label3"
      data-floating="bottom"
      style="--_ds-floating-arrow-x: 583px; --_ds-floating-arrow-y: -32px; width: 1166px; max-height: 773px; translate: <removed>;"
    >
      <u-option
        value="sogndal"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Sogndal
      </u-option>
      <u-option
        value="oslo"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Oslo
      </u-option>
      <u-option
        value="brønnøysund"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Brønnøysund
      </u-option>
      <u-option
        value="stavanger"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Stavanger
      </u-option>
      <u-option
        value="trondheim"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Trondheim
      </u-option>
      <u-option
        value="bergen"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Bergen
      </u-option>
      <u-option
        value="lillestrøm"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Lillestrøm
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
`;

exports[`Custom Filter Alt 2 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="components-suggestion--custom-filter-alt-2"
    id=":label4"
  >
    Skriv inn et tall mellom 1-6
  </label>
  <ds-suggestion>
    <input
      placeholder=" "
      id="components-suggestion--custom-filter-alt-2"
      type="text"
      data-label
      list=":u-datalist6"
      aria-label="​​​​​"
      popovertarget=":u-datalist6"
      aria-autocomplete="list"
      aria-controls=":u-datalist6"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <del
      aria-label="Tøm"
      hidden
      role="button"
    >
    </del>
    <u-datalist
      popover="manual"
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      role="listbox"
      tabindex="-1"
      aria-multiselectable="false"
      id=":u-datalist6"
      aria-labelledby=":label4"
      data-floating="bottom"
      style="--_ds-floating-arrow-x: 583px; --_ds-floating-arrow-y: -32px; width: 1166px; max-height: 773px; translate: <removed>;"
    >
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Sogndal
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Oslo
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Brønnøysund
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Stavanger
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Trondheim
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Bergen
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Lillestrøm
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
`;

exports[`Default Value 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="components-suggestion--default-value"
    id=":label8"
  >
    Velg en destinasjon
  </label>
  <ds-suggestion>
    <data
      value="Sogndal"
      aria-label="Sogndal, Press to remove"
      aria-selected="true"
      role="option"
      slot="items"
      tabindex="-1"
    >
      Sogndal
    </data>
    <input
      placeholder=" "
      id="components-suggestion--default-value"
      type="text"
      data-label
      list=":u-datalista"
      aria-label="​​​​​"
      popovertarget=":u-datalista"
      aria-autocomplete="list"
      aria-controls=":u-datalista"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <del
      aria-label="Tøm"
      role="button"
    >
    </del>
    <u-datalist
      popover="manual"
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      role="listbox"
      tabindex="-1"
      aria-multiselectable="false"
      id=":u-datalista"
      aria-labelledby=":label8"
      data-floating="bottom"
      style="--_ds-floating-arrow-x: 583px; --_ds-floating-arrow-y: -32px; width: 1166px; max-height: 773px; translate: <removed>;"
    >
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="true"
        selected
        aria-hidden="false"
      >
        Sogndal
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        disabled
        aria-hidden="true"
      >
        Oslo
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        disabled
        aria-hidden="true"
      >
        Brønnøysund
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        disabled
        aria-hidden="true"
      >
        Stavanger
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        disabled
        aria-hidden="true"
      >
        Trondheim
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        disabled
        aria-hidden="true"
      >
        Bergen
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="true"
        aria-selected="false"
        disabled
        aria-hidden="true"
      >
        Lillestrøm
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
`;

exports[`Fetch External 1`] = `
<ds-field lang="en">
  <label
    data-weight="medium"
    for="components-suggestion--fetch-external"
    id=":label6"
  >
    Search for countries (in english)
  </label>
  <ds-suggestion>
    <input
      placeholder
      id="components-suggestion--fetch-external"
      type="text"
      data-label
      list=":u-datalist8"
      aria-label="​​​​​"
      popovertarget=":u-datalist8"
      aria-autocomplete="list"
      aria-controls=":u-datalist8"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <del
      aria-label="Tøm"
      hidden
      role="button"
    >
    </del>
    <u-datalist
      popover="manual"
      data-nofilter
      data-sr-plural="%d countries"
      data-sr-singular="%d country"
      role="listbox"
      tabindex="-1"
      aria-multiselectable="false"
      id=":u-datalist8"
      aria-labelledby=":label6"
      data-floating="bottom"
      style="--_ds-floating-arrow-x: -8px; --_ds-floating-arrow-y: -32px; width: 1166px; max-height: 773px; translate: <removed>;"
    >
    </u-datalist>
  </ds-suggestion>
</ds-field>
`;

exports[`In Details 1`] = `
<details data-variant="default">
  <summary>
    Åpne details som har overflow: clip;
  </summary>
  <div>
    <ds-field>
      <label
        data-weight="medium"
        for="components-suggestion--in-details"
      >
        Velg en destinasjon
      </label>
      <ds-suggestion autofocus>
        <input
          placeholder
          id="components-suggestion--in-details"
          type="text"
          data-label
          list=":u-datalistb"
          aria-label="​​​​​"
          popovertarget=":u-datalistb"
          aria-autocomplete="list"
          aria-controls=":u-datalistb"
          aria-expanded="true"
          autocomplete="off"
          role="combobox"
        >
        <del
          aria-label="Tøm"
          hidden
          role="button"
        >
        </del>
        <u-datalist
          popover="manual"
          data-nofilter
          data-sr-plural="%d forslag"
          data-sr-singular="%d forslag"
          hidden
          role="listbox"
          tabindex="-1"
          aria-multiselectable="false"
          id=":u-datalistb"
        >
          <u-option
            tabindex="-1"
            role="option"
            aria-disabled="false"
            aria-selected="false"
          >
            Sogndal
          </u-option>
          <u-option
            tabindex="-1"
            role="option"
            aria-disabled="false"
            aria-selected="false"
          >
            Oslo
          </u-option>
          <u-option
            tabindex="-1"
            role="option"
            aria-disabled="false"
            aria-selected="false"
          >
            Brønnøysund
          </u-option>
          <u-option
            tabindex="-1"
            role="option"
            aria-disabled="false"
            aria-selected="false"
          >
            Stavanger
          </u-option>
          <u-option
            tabindex="-1"
            role="option"
            aria-disabled="false"
            aria-selected="false"
          >
            Trondheim
          </u-option>
          <u-option
            tabindex="-1"
            role="option"
            aria-disabled="false"
            aria-selected="false"
          >
            Bergen
          </u-option>
          <u-option
            tabindex="-1"
            role="option"
            aria-disabled="false"
            aria-selected="false"
          >
            Lillestrøm
          </u-option>
        </u-datalist>
      </ds-suggestion>
    </ds-field>
  </div>
</details>
`;

exports[`Multiple 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="components-suggestion--multiple"
    id=":label7"
  >
    Velg en destinasjon
  </label>
  <ds-suggestion data-multiple>
    <input
      placeholder
      id="components-suggestion--multiple"
      type="text"
      data-label
      list=":u-datalist9"
      aria-label=", No selected​​​​​"
      popovertarget=":u-datalist9"
      aria-autocomplete="list"
      aria-controls=":u-datalist9"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
      form="#"
    >
    <del
      aria-label="Tøm"
      hidden
      role="button"
    >
    </del>
    <u-datalist
      popover="manual"
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      role="listbox"
      tabindex="-1"
      aria-multiselectable="true"
      id=":u-datalist9"
      aria-labelledby=":label7"
      data-floating="bottom"
      style="--_ds-floating-arrow-x: 583px; --_ds-floating-arrow-y: -32px; width: 1166px; max-height: 773px; translate: <removed>;"
    >
      <u-option
        label="Sogndal"
        value="Sogndal"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Sogndal
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Oslo"
        value="Oslo"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Oslo
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Brønnøysund"
        value="Brønnøysund"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Brønnøysund
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Stavanger"
        value="Stavanger"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Stavanger
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Trondheim"
        value="Trondheim"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Trondheim
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Bergen"
        value="Bergen"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Bergen
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Lillestrøm"
        value="Lillestrøm"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Lillestrøm
        <div>
          Kommune
        </div>
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
`;

exports[`Preview 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="components-suggestion--preview"
    id=":label1"
  >
    Velg en destinasjon
  </label>
  <ds-suggestion>
    <input
      placeholder=" "
      id="components-suggestion--preview"
      type="text"
      data-label
      list=":u-datalist1"
      aria-label="​​​​​"
      popovertarget=":u-datalist1"
      aria-autocomplete="list"
      aria-controls=":u-datalist1"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <del
      aria-label="Tøm"
      hidden
      role="button"
    >
    </del>
    <u-datalist
      popover="manual"
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      role="listbox"
      tabindex="-1"
      aria-multiselectable="false"
      id=":u-datalist1"
      aria-labelledby=":label1"
      data-floating="bottom"
      style="--_ds-floating-arrow-x: 583px; --_ds-floating-arrow-y: -32px; width: 1166px; max-height: 773px; translate: <removed>;"
    >
      <u-option
        label="Sogndal"
        value="Sogndal"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Sogndal
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Oslo"
        value="Oslo"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Oslo
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Brønnøysund"
        value="Brønnøysund"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Brønnøysund
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Stavanger"
        value="Stavanger"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Stavanger
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Trondheim"
        value="Trondheim"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Trondheim
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Bergen"
        value="Bergen"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Bergen
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        label="Lillestrøm"
        value="Lillestrøm"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        aria-hidden="false"
      >
        Lillestrøm
        <div>
          Kommune
        </div>
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
`;
